Name:              hcamera
Version:           0.18
Synopsis:          hcamera
Description:       hcamera
License:           GPL
Category:          Graphics
Copyright:         (c) Rohan Drape, 2008-2019
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hcamera
Tested-With:       GHC == 8.4.4
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

Library
  Build-Depends:   base >= 4.8 && < 5,
                   directory,
                   exif,
                   filepath,
                   html-minus == 0.18.*,
                   process,
                   split,
                   time,
                   xml
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Graphics.Camera.Exif
                   Graphics.Camera.HTML
                   Graphics.Camera.Rename
                   Graphics.Camera.Resize
                   Graphics.Camera.Time

Source-Repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hcamera

-- Local Variables:
-- truncate-lines:t
-- End:
