Name:              hcamera
Version:           0.23
Synopsis:          hcamera
Description:       hcamera
License:           GPL
Category:          Graphics
Copyright:         (c) Rohan Drape, 2008-2026
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hcamera
Tested-With:       GHC == 9.14.1
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

Library
  Build-Depends:   base >= 4.8 && < 5,
                   containers,
                   directory,
                   filepath,
                   hsexif,
                   html-minus == 0.23.*,
                   process,
                   split,
                   time,
                   xml
  GHC-Options:     -Wall -Wno-x-partial -Wno-incomplete-uni-patterns
  Exposed-modules: Graphics.Camera.Exif
                   Graphics.Camera.Html
                   Graphics.Camera.Rename
                   Graphics.Camera.Resize
                   Graphics.Camera.Time

Source-Repository  head
  Type:            darcs
  Location:        http://rohandrape.net/sw/hcamera

-- Local Variables:
-- truncate-lines:t
-- End:
